# liquipedia-editing-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml  issue_report.yml
.github/workflows/: licence_workflow.yml  lint-and-test.yml  test-coverage.yml
_docs/: ROADMAP.md
_docs/sphinx/: changelog.md  conf.py  examples.md  getting-started.md  index.rst
_docs/sphinx/_templates/: page.html
_docs/sphinx/api/: client.rst  config.rst  exceptions.rst  models.rst
_tests/: README.md  __init__.py  conftest.py  test_api_retry.py  test_api_startgg.py  test_config.py  test_exceptions.py  test_models.py
lptk/: README.md  __init__.py  config.py  exceptions.py
lptk/api/: README.md  __init__.py  _retry.py  startgg.py
lptk/models/: README.md  __init__.py  team.py  tournament.py
src/: __init__.py  _sandbox.py  _sandbox2.py  generate_team_participants.py  liquipedia_tools.py  startgg_tools.py  tools.py
src/prize_pool_filler/: README.md  __init__.py  fill_prize_pool.py  get_phase_results.py  run_fill.py
src/stream_filler/: __init__.py  insert_streams.py
src/tournament_page_filler/: README_TEAM_PARTICIPANTS.md  __init__.py  liquipedia_tools.py  startgg_tools.py
