[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquipedia-editing-toolkit"
version = "0.0.1-alpha"
description = "CLI toolkit for start.gg and Liquipedia integration for esports tournaments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12, <3.15"
authors = [
    { name = "Dylan \"Dyl-M\" Monfret", email = "music.dyl.music@gmail.com" }
]
keywords = ["liquipedia", "startgg", "esports", "rocket-league", "wikitext"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # To be defined during rework
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.0",
]

[project.scripts]
lptk = "lptk.cli:app"

[project.urls]
Homepage = "https://github.com/Dyl-M/liquipedia-editing-toolkit"
Repository = "https://github.com/Dyl-M/liquipedia-editing-toolkit"
Issues = "https://github.com/Dyl-M/liquipedia-editing-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["lptk"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lptk"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pycountry.*",
    "bs4.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["lptk"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
    "if __name__ == .__main__.:",
]
