[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquipedia-editing-toolkit"
version = "0.0.3-alpha"
description = "Toolkit for automating Liquipedia editing from start.gg tournament data (esports, Rocket League focus)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dylan \"Dyl-M\" Monfret", email = "dyl_m.dev@proton.me" },
]
keywords = ["liquipedia", "startgg", "esports", "rocket-league", "wikitext"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4==4.14.3",
    "liquipydia==0.1.0",
    "pycountry==26.2.16",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "requests==2.33.1",
    "typer==0.25.1",
]

[project.scripts]
lptk = "lptk.cli:app"

[project.urls]
Homepage = "https://github.com/Dyl-M/liquipedia-editing-toolkit"
Documentation = "https://dyl-m.github.io/liquipedia-editing-toolkit/"
Repository = "https://github.com/Dyl-M/liquipedia-editing-toolkit"
Issues = "https://github.com/Dyl-M/liquipedia-editing-toolkit/issues"
Changelog = "https://github.com/Dyl-M/liquipedia-editing-toolkit/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    { include-group = "test" },
    "ruff==0.15.12",
    "mypy==1.20.2",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-requests==2.33.0.20260408",
]
test = [
    "pytest==9.0.3",
    "coverage==7.13.5",
]
docs = [
    "furo==2025.12.19",
    "myst-parser==5.0.0",
    "sphinx==9.1.0",
    "sphinx-autobuild==2025.8.25",
    "sphinx-autodoc-typehints==3.10.2",
    "sphinx-copybutton==0.5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["lptk"]

# --- Ruff ---

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["_archive"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "D", # pydocstyle
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "S", # flake8-bandit (security)
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "TCH", # flake8-type-checking
]
ignore = [
    "D104", # missing docstring in public package
    "RUF022", # __all__ sorting (we use comment-grouped entries)
]

[tool.ruff.lint.per-file-ignores]
"_tests/**" = ["ANN", "S101", "S105", "S106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["lptk", "_tests"]
force-sort-within-sections = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# --- Mypy ---

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["_archive"]

[[tool.mypy.overrides]]
module = [
    "pycountry.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# --- Pytest ---

[tool.pytest.ini_options]
testpaths = ["_tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: opt-in tests that hit the live start.gg or Liquipedia API (requires credentials)",
]

# --- Coverage ---

[tool.coverage.run]
source = ["lptk"]
branch = true
omit = ["_tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
    "if __name__ == .__main__.:",
]

# --- Semantic Release ---

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "lptk/__init__.py:__version__",
]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore", "deps"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
